<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/fl_step_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_step_previous"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:contentDescription="@string/previous"
            android:text="@string/previous" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGreyDivider" />

        <Button
            android:id="@+id/bt_step_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_weight=".5"
            android:contentDescription="@string/next"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>