...
                android:layout_marginTop="@dimen/dimen10"
                android:text="@string/steps"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text14" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_steps_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen10"
                android:layout_marginRight="@dimen/dimen10"
                android:layout_marginTop="@dimen/dimen8" />
        </LinearLayout>
...
